# BrainSync

./: .gitattributes  .gitignore  123.yaml  CLAUDE.md  LICENSE  README.md  bot_runner.bat  bot_runner.py  install.bat  install.sh  main.py  promt.md  pyproject.toml  requirements.txt  setup.py  start.bat  start.py  start.sh
.brain/: AGENTS.md
.brain/skills/: classifier.md  obsidian-rules.md  vault-writer.md
.claude/: settings.local.json
.specify/memory/: constitution.md
config/: loader.py
docs/: 2026-03-30-brainsync-design.md
git_sync/: sync.py
specs/: brainsync-v1.md
specs/001-brainsync-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-media-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-semantic-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
telegram/: __init__.py  bot.py  formatter.py  i18n.py  keyboards.py
telegram/handlers/: callbacks.py  commands.py  media.py  message.py  notebooklm_cmd.py  schedule.py  youtube_chat.py
tests/: test_router.py
vault_writer/: server.py
vault_writer/ai/: anthropic_provider.py  classifier.py  claude_code_provider.py  context_manager.py  enricher.py  formatter.py  linker.py  ollama_provider.py  provider.py  router.py  synthesizer.py  transcriber.py
vault_writer/media/: __init__.py  pdf_extractor.py
vault_writer/rag/: bm25_index.py  embedder.py  engine.py  intent.py  vector_store.py
vault_writer/tools/: classify_content.py  create_note.py  executor.py  gamification.py  get_vault_index.py  health.py  (+4 more)
(+12 files in other folders)
