[project]
name = "brainsync"
version = "1.0.0"
description = "Local AI-powered personal knowledge management via Telegram and Obsidian"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0",
    "anthropic",
    "mcp",
    "pyyaml",
    "gitpython",
    "requests",
    "faster-whisper",
    "pypdf",
    "chromadb",
    "sentence-transformers",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest",
]
